@@ -23,6 +23,7 @@ Laurent Deniel &lt;deniel@worldnet.fr&gt;
 Lars Eggert
 David Flamand &lt;dflamand@gmail.com&gt;
 David Goldfarb
+Ronald W. Henderson &lt;rwhalb@users.sourceforge.net&gt;
 Simon Kirby &lt;sim@neato.org&gt;
 Pav Lucistnik
 Eran Mann &lt;eran@nbase.co.il&gt;
